--- a/css/checkout1.css
+++ b/css/checkout1.css
@@ -31,34 +31,10 @@ tr:nth-child(odd){background-color: #fff;
 tr:nth-child(4){
   background-color: #442727;
 }
-a.btn1{
-  background-color: #363636;
-  width: 35%;
-  height: 4%;
-  color: #fff;
-  font-size: 19px;
-  margin: 5em 0em 0em 5em;
-  padding: 4px 4px 4px 4px;
-  position: absolute;
-  border-radius: 8px
-}
-.btn4{
-  background-color: #0779e4;
-  width: 68%;
-  height: 7%;
-  color: #fff;
-  font-size: 16px;
-  padding: 7px 5px 6px 6px;
-  border-radius: 8px;
-  cursor: pointer;
-  margin: 2em 5em 5em 3em;
-  text-align: center;
-  position: absolute;
-}
+
 .collapse{
   height: 92%;
-  width: 100%;
-  background-color:#0779e4;
+  background-color:antiquewhite;
   overflow: hidden;
 }
 label {
@@ -67,36 +43,21 @@ label {
   color: #000;
 }
 
-.collapse a.button{
-  width:72%;
-  background-color: darkcyan;
+.collapse .button{
+  background-color: aqua;
   color: #000;
   border: 2px solid black;
   border-radius: 8px;
-  padding: 7px 7px 9px 9px;
-  margin: 4em 0 0 -17.4em;
+  padding: 12px 60px;
+  margin: 36px 0;
   cursor: pointer;
-  position:absolute;
-  text-align: center;
+  text-decoration: none;
   display: inline-block;
 }
 input.check-box{
-  margin: 0em 6em 0em 9em;
-  font-size:18px;
-  width: 7%;
-  height: 6%;
+  margin: 1em 0em 0em 12em;
 }
-.btn-card{
-  width: 38%;
-  height: 2em;
-  background-color: blue;
-  color: #fff;
-  border: 2px solid black;
-  border-radius: 12px;
-  padding: 4px 4px 4px 4px;
-  margin: -19.7em 0em 0em 10em;
-  position: absolute;
-}
+
 p{
   margin-left: 10em;
   color:blue;
@@ -121,10 +82,6 @@ p{
   padding: 10px;
   text-align: center;
   transition: 0.5s;
-}
-.fa-check-circle{
-  font-size: 51px;
-  color:blue;
 }
 
 .close{
@@ -179,20 +136,6 @@ h2{
   color:#555;
   font-size: 21px;
 }
-
-.open-button {
-  background-color: #555;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  opacity: 0.8;
-  position: fixed;
-  bottom: 23px;
-  right: 28px;
-  width: 280px;
-}
-
 .form-popup {
   display: none;
   position: absolute;
@@ -246,9 +189,8 @@ h2{
   bottom: 0;
   height: 100%;
   width: 100%;
-  margin-top: -28em;
   z-index: 9;
-  background-color: aqua;
+  background-color: #ddd;
 }
 
 input[type=text] {
