--- a/style.css
+++ b/style.css
@@ -2,10 +2,6 @@ body{
     background-color: #ddd;
 }
 
-.registration-form{
-	padding: 50px 0;
-}
-
 .registration-form form{
     background-color: #5891ff;
     max-width: 600px;
@@ -14,19 +10,6 @@ body{
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
-}
-
-.registration-form .form-icon{
-	text-align: center;
-    background-color: #000;
-    border-radius: 50%;
-    font-size: 40px;
-    color: white;
-    width: 100px;
-    height: 100px;
-    margin: auto;
-    margin-bottom: 7px;
-    line-height: 100px;
 }
 
 .registration-form .item{
@@ -38,12 +21,11 @@ body{
 .registration-form .create-account{
     border-radius: 30px;
     position: inherit;
-    font-size: 18px;
     font-weight: bold;
     background-color: #000;
     border: none;
     color: white;
-    margin-top: 20px;
+    margin: 2% 21%;
 }
 
 .registration-form .social-media{
@@ -83,7 +65,10 @@ body{
     color: blue;
 }
 p{
-  color: #fff;
+  color: #000;
+  text-align: center;
+  font-family: cursive;
+  font-size: 2rem;
 }
 label{
   color: #fff;
@@ -121,12 +106,5 @@ a:hover{
 @media (max-width: 576px) {
     .registration-form form{
         padding: 50px 20px;
-    }
-
-    .registration-form .form-icon{
-        width: 70px;
-        height: 70px;
-        font-size: 30px;
-        line-height: 70px;
     }
 }
