--- a/css/cancel.css
+++ b/css/cancel.css
@@ -1,6 +1,8 @@
 *{
-  box-sizing: border-box;
-  }
+  box-sizing: border-box;}
+body{
+  background-color: rgb(60,179,113);
+  text-align: center;}
 .box{
   background-color: black;
   color: #fff;
@@ -12,7 +14,7 @@
   padding: 12px 12px 12px 12px
 }
 .button1{
-  margin: 2em;
+  margin-top: 1.5em;
   background-color: green;
   color: #fff;
   border-radius: 10px;
@@ -24,12 +26,47 @@
 a:link{
   text-decoration: none;
 }
-a:hover{
-  text-transform:uppercase;
-  color:yellow;
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0, 0.8);
 }
 
-span:hover{
-  text-transform:uppercase;
-  color:yellow;
+.modal-content {
+  background-color: rgba(132, 106, 221, 0.9);
+  padding: 20px;
+  border: 4px solid #f1f1f1;
+  height: 100%;
+}
+
+.close {
+  color: #f1f1f1;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.popupbox{
+  height: auto;
+  border-radius: 25px;
+  padding: 6px 13px 5px;
+  background-color: #f1f1f1;
+}
+input, textarea{
+  display: block;
+  width: 100%;
+  background: #e6e6e6;
+  font-family: Montserrat-Bold;
+  font-size: 23px;
+  line-height: 1.5;
+  color: #666;
+  height: 73px;
+  border-radius: 25px;
+  padding:0 23px;
+  margin-bottom: 32px;
 }
