--- a/css/checkout1.css
+++ b/css/checkout1.css
@@ -7,6 +7,10 @@ box{
   background-color:#95389e;
   overflow: scroll;
 }
+i{
+  font-size: 65px;
+  color: rgb(0,203,0);
+}
 h3{
   text-align: center;
   font-family: open sans-serif, Arial;
@@ -34,7 +38,7 @@ tr:nth-child(4){
 
 .collapse{
   height: 92%;
-  background-color:antiquewhite;
+  background-color:red;
   overflow: hidden;
 }
 label {
@@ -50,7 +54,6 @@ label {
   border-radius: 8px;
   padding: 12px 60px;
   margin: 36px 0;
-  cursor: pointer;
   text-decoration: none;
   display: inline-block;
 }
@@ -88,10 +91,9 @@ p{
   font-size: 20px;
   background-color: #ddd;
   padding: 10px 30px;
-  cursor: pointer;
   display: inline-block;
   border-radius: 8px;
-  display: inline-block;
+  text-decoration: none;
 }
 #myBtn{
   background-color: #0779e4;
@@ -167,12 +169,9 @@ h2{
 .form-container .btn {
   background-color: #4CAF50;
   color: white;
-  padding: 16px 20px;
+  padding: 12px 47px;
   border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
+  margin-left:24px;
 }
 
 .form-container .cancel {
@@ -190,7 +189,7 @@ h2{
   height: 100%;
   width: 100%;
   z-index: 9;
-  background-color: #ddd;
+  background-color: #f1f1f1;
 }
 
 input[type=text] {
