--- a/style.css
+++ b/style.css
@@ -29,16 +29,12 @@ body{
 }
 
 .registration-form .social-media{
-    max-width: 600px;
     background-color: #fff;
-    margin: auto;
     padding: 35px 0;
     text-align: center;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     color: #9fadca;
-    border-top: 1px solid #dee9ff;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
 }
 
 .registration-form .social-icons{
@@ -49,14 +45,11 @@ body{
 .registration-form .social-icons a{
     font-size: 23px;
     margin: 0 3px;
-    color: #5691ff;
-    border: 1px solid;
     border-radius: 50%;
     width: 45px;
     display: inline-block;
-    height: 45px;
     text-align: center;
-    background-color: #fff;
+    background-color: blue;
     line-height: 45px;
 }
 
